--- a/index.html
+++ b/index.html
@@ -183,12 +183,26 @@
     .new-row { animation: flash 1s ease-out; }
 
     /* 실시간 가격 업데이트 강조 */
-    @keyframes price-flash {
-      from { background-color: rgba(240, 185, 11, 0.4); }
+    @keyframes price-up-flash {
+      from { background-color: rgba(22, 163, 74, 0.4); } /* Green */
       to { background-color: transparent; }
     }
-    .price-flash {
-      animation: price-flash 0.7s ease-out;
+    @keyframes price-down-flash {
+      from { background-color: rgba(220, 38, 38, 0.4); } /* Red */
+      to { background-color: transparent; }
+    }
+    .price-up-flash {
+      animation: price-up-flash 1s ease-out;
+    }
+    .price-down-flash {
+      animation: price-down-flash 1s ease-out;
+    }
+    /* Ensure the price value itself is the target for animation */
+    .price-value {
+      display: inline-block; /* Required for background animation on span */
+      padding: 0 2px; /* Small padding to make background visible */
+      border-radius: 2px;
+      transition: background-color 0.1s; /* Smooth transition when removing class */
     }
 
     /* 페이지네이션 */
