--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     .section.active { display: block; }
 
     /* 테이블 */
-    .table-wrap { overflow-x: auto; background: var(--bg-card); border-radius: 0; border: none; height: calc(100vh - 260px); min-height: 400px; overflow-y: auto; }
+    .table-wrap { overflow-x: auto; background: var(--bg-card); border-radius: 0; border: none; max-height: 75vh; overflow-y: auto; }
     .data-table { width: 100%; border-collapse: collapse; white-space: nowrap; }
     
     .data-table th {
